# Sortund

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  README.md  adb-fast.bat  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy-ai-worker.yml  deploy-backend.yml
apps/ai-worker/: .dockerignore  Dockerfile  README.md  export_mert.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
apps/ai-worker/app/: main.py
apps/ai-worker/app/core/: config.py  constants.py  logger.py  settings.py  utils.py
apps/ai-worker/app/ml/: models.py
apps/ai-worker/app/schemas/: analysis.py
apps/ai-worker/app/services/: musicbrainz.py  pipeline.py  shazam.py  theaudiodb.py  youtube.py
apps/ai-worker/tests/: conftest.py  pipeline_results.json  test_archive.py  test_main.py
apps/ai-worker/tests/core/: test_logger.py  test_settings.py  test_utils.py
apps/ai-worker/tests/ml/: test_models.py
apps/ai-worker/tests/services/: test_musicbrainz.py  test_pipeline.py  test_shazam.py  test_theaudiodb.py  test_youtube.py
apps/backend/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  jest.config.js  package.json  tsconfig.json
apps/backend/src/: app.controller.ts  app.module.ts  app.service.spec.ts  main.ts
apps/backend/test/: app.service.spec.ts
apps/frontend/: app.json  babel.config.js  eslint.config.mjs  jest.config.js  metro.config.js  package-lock.json  package.json  tamagui.config.ts  tsconfig.json
(+63 files in other folders)
