[project]
name = "ai-worker"
version = "0.1.0"
description = "AI Worker"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "numpy>=1.23.5",
    "librosa>=0.10.0",
    "onnxruntime>=1.15.0",
    "shazamio>=0.5.1",
    "ytmusicapi>=1.0.2",
    "transformers>=4.30.0",
    "soundfile",
    "huggingface_hub",
    "musicbrainzngs>=0.7.1",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "black",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "httpx>=0.24.1",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.venv
  | __pycache__
  | \.git
)/
'''

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--cov=app"
testpaths = ["tests"]